# cap-aggregator

./: .env.sample  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.override.yml.sample  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/docs/: architectural_patterns.md  template_conventions.md
deploy/martin/: config.yaml
deploy/mosquitto/: acl.example  entrypoint.sh  mosquitto.conf
deploy/nginx/: default.conf
docs/: design.md  roadmap-usable.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
frontend/src/: App.vue  alert-detail.ts  home.ts  main.ts  public.ts
frontend/src/__tests__/: alertLayers.spec.ts  alertList.spec.ts  authoritiesState.spec.ts  authoritiesView.spec.ts  basemap.spec.ts  config.spec.ts  countryFlag.spec.ts  dateRange.spec.ts  explorerSidebar.spec.ts  filters.spec.ts  grouping.spec.ts  homeTime.spec.ts  popup.spec.ts  router.spec.ts  severity.spec.ts  severityLegend.spec.ts  sidebarState.spec.ts  sidemenu.spec.ts  tableView.spec.ts  theme.spec.ts  timeButtons.spec.ts  timeControl.spec.ts  timeControlModes.spec.ts
frontend/src/assets/: main.css
frontend/src/components/: AlertSidebar.vue  BasemapSwitcher.vue  DateRangePanel.vue  ExplorerSidebar.vue  FilterPanel.vue  SeverityLegend.vue  SideMenu.vue  TimeControl.vue
frontend/src/composables/: useSidebar.ts  useTheme.ts
frontend/src/lib/: alertLayers.ts  api.ts  authoritiesState.ts  basemap.ts  (+11 more)
src/capaggregator/: __init__.py  celery_singleton_backend.py  manage.py  version.py
(+148 files in other folders)
