[project]
name = "cap-aggregator"
description = "CAP v1.2 alert aggregator — ingests alerts from cap-composer instances over MQTT, serves vector tiles, search APIs and re-publication feeds"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "wagtail>=7.0,<8.0",
    "psycopg>=3.1",
    "celery[redis]>=5.4",
    "django-celery-beat>=2.6",
    "django-celery-results>=2.5",
    "django-task-ferry>=0.1.1",
    "django-redis>=5.4",
    "celery-singleton>=0.3",
    "redis>=5.0",
    "paho-mqtt>=2.0",
    "lxml>=5.0",
    "signxml>=3.2",
    "djangorestframework>=3.15",
    "djangorestframework-gis>=1.0",
    "drf-spectacular>=0.27",
    "django-environ>=0.11",
    "dj-database-url>=2.1",
    "shapely>=2.0",
    "pyproj>=3.6",
    "feedparser>=6.0",
    "django-countries>=7.6",
    "requests>=2.31",
    "cryptography>=42.0",
    "gunicorn>=22.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar",
    "ruff",
    "pytest",
    "pytest-django",
]

[project.scripts]
capagg = "capaggregator.manage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/capaggregator"]

[tool.ruff]
line-length = 120
target-version = "py312"


[tool.setuptools.dynamic]
# version always from the code
version = { attr = "capaggregator.version.__version__" }